Update configuration and enhance application structure for version 1.0.0 release. Enabled ESLint and TypeScript checks, optimized image handling, and added security headers in next.config.mjs. Updated package.json with new project name, version, and author details. Enhanced documentation with versioning and maintenance schedules in PRODUCTION_SETUP.md and SETUP_GUIDE.md. Improved user interface in asset registration and login forms, including better validation and error handling. Updated dashboard components for improved user experience and added contact information for IT support. Adjusted sample data for consistency with new asset details.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "university-asset-management",
+  "version": "1.0.0",
+  "description": "Professional Asset Management System for Chinhoyi University of Technology",
   "private": true,
+  "author": "Chinhoyi University of Technology",
+  "license": "MIT",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
